<resources>
    <string name="app_name">Ultimate Roleplay Companion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="adnd">AD&amp;D</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="genesys">Genesys</string>
    <string name="title_activity_adnd">AdndActivity</string>
    <string name="wizard_spells">Wizard Spells</string>
    <string name="priest_spells">Priest Spells</string>
    <string name="talents">Talents</string>
    <string name="urc">Ultimate Roleplay Companion</string>
    <string name="brawn">Brawn</string>
    <string name="agility">Agility</string>
    <string name="intellect">Intellect</string>
    <string name="cunning">Cunning</string>
    <string name="willpower">Willpower</string>
    <string name="presence">Presence</string>
    <string name="soak">Soak</string>
    <string name="soak_value">soak value</string>
    <string name="w_threshold">W. Threshold</string>
    <string name="s_threshold">S. Threshold</string>
    <string name="m_r_defense">M/R Defense</string>
    <string name="skills">Skills</string>
    <string name="Abilities">Abilities</string>
    <string name="Equipment">Equipment</string>
    <string name="antagonists">Antagonists</string>
</resources>
