<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/cream">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/urc"
                android:textAlignment="center"
                android:textColor="@color/cinnamon"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/caramel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <RelativeLayout
                android:layout_width="96dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/adnd_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/transparent"
                    android:contentDescription="@string/adnd"
                    android:src="@drawable/dnd_logo"
                    android:tint="@color/cinnamon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/adnd_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/adnd"
                    android:textColor="@color/cinnamon"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="96dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/genesys_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/transparent"
                    android:contentDescription="@string/genesys"
                    android:src="@drawable/genesys_logo"
                    android:tint="@color/cinnamon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/genesys_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:text="@string/genesys"
                    android:textColor="@color/cinnamon"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>